Connection to mongo atlas

--- a/.env.production.local
+++ b/.env.production.local
@@ -5,6 +5,9 @@ PORT = 3000
 DB_HOST = localhost
 DB_PORT = 27017
 DB_DATABASE = prod
+DB_USERNAME = venkat
+DB_PASSWORD = QzfFyJxsq7mQBbMq
+DB_CLUSTER = cluster0
 
 # TOKEN
 SECRET_KEY = secretKey
