--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 16
       - run: npm install
-      - run: npm start
+      - run: npm run build
 
  
           
