--- a/.github/workflows/npm-deploy.yml
+++ b/.github/workflows/npm-deploy.yml
@@ -17,17 +17,22 @@ jobs:
     steps:
       - name: Checkout the files
         uses: actions/checkout@v2
-
+      - name: Install Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.x'
+      - name: Install npm dependencies
+        run: npm install
+      - name: Run build task
+        run: npm run build --if-present
       - name: Deploy to Server 1
         uses: easingthemes/ssh-deploy@main
         env:
+          SOURCE: "dist/"
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           REMOTE_HOST: ${{ secrets.HOST_DNS }}
           REMOTE_USER: ${{ secrets.USERNAME }}
           TARGET: ${{ secrets.TARGET_DIR }}
-      
-      - name: Run application   
-      - uses: actions/checkout@v3
-      - run: npm install
-      - run: npm run build
+          EXCLUDE: "/dist/, /node_modules/"
+        
           
